--- a/.travis.yml
+++ b/.travis.yml
@@ -44,9 +44,8 @@ notifications:
 # 5. Run maven install before running lint-java.
 install:
   - export MAVEN_SKIP_RC=1
-  - build/mvn -T 4 -q -DskipTests  -Pyarn -Phadoop-2.3 install
+  - mvn -T 4 -q -Pyarn -Phadoop-2.6 -Dscala-2.11 -DskipTests clean package install
 
 # 6. Run lint-java.
 script:
   - dev/lint-java
-
